# RenderingAssignment

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: instancing.pixelShader.glsl  instancing.vertexShader.glsl
src/: CMakeLists.txt  main.cpp
